feat: перевел интеграцию на gigachat